# set__algorithms

./: .gitmodules  CMakeLists.txt  main.cpp
include/: node.h  set.h  set.hh  smart_pointers.h
src/: set.cc  smart_pointers.cpp
test/: gtest_node.cpp  gtest_set.cpp  gtest_smart_pointers.cpp
